force-app/main/default/objects/Sponsor__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>The email address of the sponsor&apos;s point of contact</description>
    <inlineHelpText>The email address of the sponsor&apos;s point of contact</inlineHelpText>
    <label>Email</label>
    <type>Email</type>
</CustomField>